app/src/test/resources/programs/invalid/NoVariableName.extension
foo main() -> Int = {
    let : Bool = false;
}
